# Text-to-SVG

./: .gitignore  README.md  pyproject.toml  qwen2.5-coder-use.py
SvgAgent/: config.py  main.py
SvgAgent/agents/: base.py  prompt_engineer.py  supervisor.py  svg_generator.py  svg_validator.py
SvgAgent/utils/: preview.py
src/: __init__.py  config.py  dataset.py  main.py  models.py  reward.py  test.py  tokenizer.py  train.py  trainer.py
