[project]
name = "text2svg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.10",
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "modelscope>=1.24.1",
    "numpy>=2.2.4",
    "openai-agents>=0.0.7",
    "pandas>=2.2.3",
    "pydantic==2.11",
    "ragatouille>=0.0.9",
    "torch>=2.6.0",
    "transformers>=4.50.3",
    "vllm>=0.1.2",
]
